--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="has-background-light">
+<html lang="en" class="has-background-grey-dark">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
